# solana-coinflip

./: .gitignore  Cargo.toml  SECURITY.md  security.txt
.cargo/: security.txt
src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
