[package]
name = "coinflip"
version = "0.1.0"
edition = "2021"
description = "Solana CoinFlip Game Program"
authors = ["FlipV2 Team"]

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.17.0"
thiserror = "1.0.50"
borsh = "0.10.3"
borsh-derive = "0.10.3"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0.0", features = ["no-entrypoint"] }
solana-security-txt = "1.1.1"

[lib]
crate-type = ["cdylib", "lib"] 